--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fishing Anoma - MVP</title>
+	<title>Fishing Anoma</title>
 	<link rel="icon" type="image/png" href="shrimps/goldenshrimp.png">
 	<link rel="stylesheet" href="style.css">
 </head>
