--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Fishing Anoma</title>
 	<link rel="icon" type="image/png" href="shrimps/goldenshrimp.png">
 	<link rel="stylesheet" href="style.css">
+	<script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </head>
 <body>
 	<div class="ui">
